@@ -45,11 +45,13 @@ as are the following DOM elements:
 </ul>
 <h4>events</h4>
 <ul>
-<li>onSubmit - invoked when the form.submit() is invoked</li>
+<li>onReset  - invoked when form.reset() is invoked or a reset button is clicked</li>
+<li>onSubmit - invoked when form.submit() is invoked or a submit button is clicked</li>
 </ul>
 <h4>methods</h4>
 <ul>
 <li>submit - submits the form</li>
+<li>reset  - resets the form controls to their default values</li>
 </ul>
 
 <h3>Image</h3>
